# tong-quant-framework

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml  research.toml
docs/: architecture.md  data-foundation.md  data-trust-matrix.md  database-migrations.md  development-roadmap.md  engineering-stabilization-review.md  historical-coverage-matrix.md  market-differences.md  market-regime-engine.md  notification-engine.md  pit-data-quality-audit.md  product-vision.md  project-review-v0.6.md  provider-calibration-phase-ii.md  provider-calibration-phase-iii.md  provider-calibration.md  research-engine.md  risk-register.md  screening-engine.md  stabilization-roadmap.md  technical-debt-register.md  v0.8-roadmap.md  validation-engine.md
scripts/: ingest_data.py  run_data_readiness.py
tests/: test_akshare_adapter.py  test_akshare_quality_audit.py  test_data_calibration.py  test_data_quality.py  test_domain_models.py  test_execution_guard.py  test_historical_replay.py  test_layering.py  test_market_regime_metrics.py  test_market_regime_models.py  test_market_regime_scoring.py  test_market_rules.py  test_notifications.py  test_phase_three_readiness.py  test_pit_readiness.py  test_point_in_time.py  test_portfolio_risk.py  test_research_engine.py  test_research_investment.py  test_screening_engine.py  test_screening_models.py  test_screening_scoring.py  test_settings.py  test_signal.py  test_sqlite_storage.py  test_tushare_calibration.py  test_tushare_capabilities.py  test_validation_engine.py
(+176 files in other folders)
